# All-Over-Again

./: .gitignore  README.md
aoa_client/: CMakeList.txt  aoa_client.log.1  build.fxbuild
aoa_client/ant/: aoa_client.properties  aoa_client.xml
aoa_client/src/application/: Application.java  Client.java  Connection.java  GUIController.java  Logger.java  Main.java  Room.java  (+3 more)
aoa_client_mvn/: pom.xml
aoa_server/: .gitignore  CMakeLists.txt  Makefile  aoa_server  srv.cpp
aoa_server/communication/: CommunicationManager.cpp  CommunicationManager.h  Message.cpp  Message.h  MessageParser.cpp  MessageParser.h  MessageProcessor.cpp  MessageProcessor.h  MessageReceiver.h  MessageSender.cpp  MessageSender.h  MessageSerializer.cpp  MessageSerializer.h  MessageType.cpp  MessageType.h  MessageValidator.cpp  MessageValidator.h  RawMessage.cpp  RawMessage.h  Receiver.cpp  Receiver.h
aoa_server/config/: log.conf
aoa_server/connection/: ConnectionManager.cpp  ConnectionManager.h
aoa_server/core/: App.cpp  App.h  Application.cpp  Application.h  Developer.h  Logger.cpp  Logger.h  Server.cpp  Server.h
aoa_server/game/: BoardDimension.cpp  BoardDimension.h  Game.cpp  Game.h  GameDifficulty.cpp  GameDifficulty.h  GameStatus.cpp  GameStatus.h  GameType.cpp  GameType.h  Player.cpp  Player.h  Room.cpp  Room.h
aoa_server/libs/: easylogging++.h
aoa_server/partial/: Indexer.cpp  Indexer.h  SafeQueue.h  Semaphore.cpp  Semaphore.h  ServerOptions.cpp  ServerOptions.h  StringBuilder.cpp  StringBuilder.h  command.cpp  command.h  err.cpp  err.h  message.cpp  message.h  tools.cpp  tools.h
(+149 files in other folders)
